fixed input bar appearing on firefox. (made username span position-absolute)

--- a/public/master.css
+++ b/public/master.css
@@ -52,13 +52,13 @@ div.container{
   flex-direction: row;
   justify-content: flex-start;
   width: 100%;
-  min-width: 700px;
+  /*min-width: 700px;*/
   height: 100%;
   height:100vh;
   min-height: 700px;
   position: fixed;
 
-  /*min-width: 722px;*/
+  min-width: 722px;
 }
 
 div.sidebar {
@@ -120,15 +120,15 @@ div.logo{
 }
 
 div.chat-area {
-  width: 100%;
+  width: 65%;
   height:100%;
   position: relative;
   display: flex;
   flex-direction column;
-  justify-content: space-around;
+  /*justify-content: space-around;*/
   /*margin-left: 30px;*/
-  min-width: 900px;
-  min-height: 636px;
+  /*min-width: 900px;
+  min-height: 636px;*/
 }
 
 .signin-btn {
@@ -187,18 +187,20 @@ div.chat-area {
   background-color: #1254af;*/
 }
 
-div.form {
+#form {
   position: absolute;
   bottom: 0px;
   width: 100%;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 div#messages {
-    min-height: 453px;
+    min-height: 10vh;
+    height: 70vh;
+    /*height: 70vh;*/
     /*max-height: 600px;*/
-    max-height: 70vh;
+    /*max-height: 70vh;*/
     /*height: 70vh;*/
     width: 100%;
     overflow-y: scroll;
@@ -206,7 +208,7 @@ div#messages {
     flex-direction: column-reverse;
     position: absolute;
     bottom: 100px;
-    top: 80px;
+    /*top: 100px;*/
     padding: 20px;
     margin-left: 20px;
 }
@@ -285,6 +287,8 @@ div.nav-bar {
 span#user-title{
   width:100%;
   height: 20px;
+  position: absolute;
+  top: 0;
 }
 #user-title {
   height: 20px;
@@ -353,7 +357,7 @@ img.logo-img{
 }
 
 div#bottom-sidebar {
-  margin-bottom: 50px;
+  margin-bottom: 10%;
 }
 
 #bottom-sidebar h3 {
